# openclaw-mlx-audio

./: .gitignore  AGENTS.md  CODEX_TASK.md  README.md  README.zh-CN.md  index.ts  launch-posts.md  openclaw.plugin.json  package-lock.json  package.json  test-proxy.mjs  tsconfig.json
.github/workflows/: ci.yml  publish.yml
docs/: design.md  e2e-test-design.md  launch-posts.md  startup-flow.md
python-runtime/: pyproject.toml
scripts/: check-schema-sync.mjs  sync-manifest-version.mjs
skills/mlx-audio/: SKILL.md
src/: config.ts  health.ts  output-path.ts  process-manager.ts  proxy.ts  run-command.ts  startup-status.ts  venv-manager.ts
test/: config-schema.test.ts  config.test.ts  e2e.test.ts  health.test.ts  output-path.test.ts  process-manager.test.ts  proxy.test.ts  run-command.test.ts  venv-manager.test.ts
tests/: e2e.sh
