[project]
name = "openclaw-mlx-audio-runtime"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "mlx-audio",
  "uvicorn",
  "fastapi",
  "python-multipart",
  "setuptools<81",
  "webrtcvad",
  "misaki[en]",
  "num2words",
  "phonemizer-fork",
  "spacy>=3.8,<3.9",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
